fixes modal tooltip on mobile

--- a/assets/css/BSstyle.css
+++ b/assets/css/BSstyle.css
@@ -44,7 +44,7 @@ body{
 /* button css --------------------- */
     .btn-success {
         background: green;
-        color: black;
+        color: lightgreen;
     }
     .btn-success:hover {
         color:rgb(5, 117, 13);
@@ -309,7 +309,8 @@ container */
         }
         .modal-header.about-me,
         .modal-footer.about-me{
-            background-color: rgba(0, 128, 0, 0.454);
+            background-color: rgb(0, 162, 0);
+            background-image: linear-gradient(120deg, transparent, rgb(2, 230, 2))
         }
         .close span {
             font-size: 1.8em;
